@@ -15,8 +15,12 @@ Summary of important user-visible changes for version 5.0 (yyyy-mm-dd):
     However, if the property "IntegerHandle" has been set to "off" then
     the property will return an empty matrix ([]).
 
- ** We now require the FFTW library to perform FFT calculations.  The
+ ** The FFTW library is now required to perform FFT calculations.  The
     FFTPACK sources have been removed from Octave.
+
+ ** The OSMesa library is no longer used.  To print invisible figures
+    when using OpenGL graphics, the Qt QOFFSCREENSURFACE feature must be
+    available and you must use the qt graphics toolkit.
 
  ** Deprecated functions.
 
